# 5_Phases_Hackthon_2

./: .gitignore
evolution_of_todo/: .mcp.json.backup  README.md  tasks.json
evolution_of_todo/history/prompts/constitution/: 4-check-constitution-compliance.constitution.prompt.md
evolution_of_todo/history/prompts/spec/: 002-cli-todo-plan.plan.prompt.md
evolution_of_todo/specs/001-cli-todo-spec/: plan.md  spec.md
evolution_of_todo/src/: exceptions.py
evolution_of_todo/src/cli/: main.py
evolution_of_todo/tests/unit/services/: test_task_service.py  (+2 more)
phase-1/: .gitignore  .mcp.json  REQUIREMENTS_CHECKLIST.md  pyproject.toml  run.bat  tasks.json  test.md
phase-1/.claude/: settings.local.json
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/constitution/: 1-create-constitution.constitution.prompt.md  2-update-constitution.constitution.prompt.md  3-update-constitution-ai-agents.constitution.prompt.md
phase-1/history/prompts/spec/: 001-cli-todo-spec.spec.prompt.md  003-cli-todo-tasks.tasks.prompt.md  004-cli-todo-implement.implement.prompt.md
phase-1/specs/001-cli-todo-spec/: data-model.md  quickstart.md  research.md  tasks.md
phase-1/specs/001-cli-todo-spec/checklists/: requirements.md
phase-1/src/models/: task.py
phase-1/src/services/: task_service.py
phase-1/tests/integration/cli/: test_cli_complete_incomplete.py  test_cli_delete.py  test_cli_list.py  test_cli_update.py
phase-1/tests/unit/: test_edge_cases.py
phase-1/tests/unit/models/: test_task.py
phase-1/tests/unit/services/: test_task_service_complete.py  test_task_service_update.py
phase-2/: CLAUDE.md  docker-compose.yml
phase-2/.specify/memory/: constitution.md
phase-2/.specify/templates/: plan-template.md  tasks-template.md
phase-2/backend/: .env  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  pyproject.toml  run_migration.py  test_middleware.py
phase-2/backend/alembic/: env.py
phase-2/backend/alembic/versions/: 001_create_tasks_table.py  002_add_task_metadata_fields.py
phase-2/backend/src/: db.py  main.py
phase-2/backend/src/api/routes/: auth.py  tasks.py
phase-2/backend/src/middleware/: jwt.py
phase-2/backend/src/models/: task.py
phase-2/backend/src/schemas/: auth.py  requests.py  responses.py
phase-2/backend/src/services/: task_service.py
phase-2/backend/tests/: conftest.py  helpers.py
phase-2/backend/tests/api/: test_create_task.py
phase-2/backend/tests/integration/: test_task_creation_isolation.py
phase-2/frontend/: .env  .gitignore  EMAIL_SETUP_INSTRUCTIONS.md  INSTALL_PG.md  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
phase-2/frontend/prisma/: schema.prisma
phase-2/specs/001-backend-auth-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-2/specs/002-frontend-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+76 files in other folders)
